# focus-with

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.remote-proxy.yml  docker-compose.remote.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: android-release.yml  android.yml  ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_focus.xml  ic_notification.xml
android/app/src/main/res/values-en/: strings.xml
app/: __init__.py  auth.py  config.py  database.py  main.py  mcp_server.py  models.py  oauth.py  oauth_admin.py  remote_mcp.py  schemas.py  security.py  worker.py
app/routes/: api.py  phone.py
app/services/: companion.py  core.py  delivery.py  focus_tools.py  plan_import.py
deploy/: Caddyfile  nginx-focuswith.conf.example
docs/: AI_INSTALL.md  AI_PROVIDERS.md  ANDROID.md  IPHONE_SHORTCUTS.md  MCP.md  PUBLISHING.md  REMOTE_MCP.md
macos/FocusFloat/: AppDelegate.m  FocusAPIClient.h  FocusAPIClient.m  FocusPanelController.h  FocusPanelController.m  Info.plist  README.md  build.sh  install.sh  main.m
scripts/: deploy_remote.sh  focus  focus-mcp  install.sh  setup_env.py  setup_remote_env.py
tests/: conftest.py  test_api.py  test_companion.py  test_core.py  test_i18n.py  test_oauth.py  test_phone_api.py  test_plan_import.py
web/: app.js  i18n.js  index.html  styles.css
(+8 files in other folders)
